// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppTitle.vue has same HTML structure with theme 404 1`] = `
<div class="app-title app-title_theme_404"><span class="app-title__tag"><span>some text</span></span>
</div>
`;

exports[`AppTitle.vue has same HTML structure with theme main 1`] = `
<div class="app-title app-title_theme_main"><span class="app-title__tag"><span>some text</span></span>
</div>
`;

exports[`AppTitle.vue has same HTML structure with theme normal 1`] = `
<div class="app-title app-title_theme_normal"><span class="app-title__tag"><span>some text</span></span>
</div>
`;

exports[`AppTitle.vue has same HTML structure with theme sub 1`] = `
<div class="app-title app-title_theme_sub"><span class="app-title__tag"><span>some text</span></span>
</div>
`;

exports[`AppTitle.vue has same HTML structure with theme text 1`] = `
<div class="app-title app-title_theme_text"><span class="app-title__tag"><span>some text</span></span>
</div>
`;
